[package]
name = "libmapvxl-rs"
version = "0.1.0"
authors = ["Autist69420 <enp7s1@tutanota.com>"]
edition = '2021'
description = "A wrapper around libmapvxl"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"